gitops/control-center/overlay/lab-dev-th/app/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
  labels:
    app: backend
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: conicle/dso-exam-01-backend:v1.0.1
          command: ["./main", "serve"]
          args:
            - "--addr=0.0.0.0"
            - "--port=$(PORT)"
            - "--cors-allowed-origins=*"
            - "--brokers=$(KAFKA_BROKERS)"
            - "--group-id=$(CONSUMER_GROUP)"
            - "--message-topic=$(MESSAGE_TOPIC)"
            - "--notify-topic=$(NOTIFY_TOPIC)"
            - "--db-conn=$(DB_CONN)"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
