gitops/control-center/overlay/lab-dev-th/app/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
