gitops/control-center/overlay/lab-dev-th/app/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  ingressClassName: nginx
  rules:
    - host: message.localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /event
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
